--- a/app/views/message/index.html.erb
+++ b/app/views/message/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Message#index</h1>
-<p>Find me in app/views/message/index.html.erb</p>
+<%= form_for(@message) do |f| %>
+  名前:<%= f.text_field :name %>
+
+  内容:<%= f.text_field :body %>
+  <%= f.submit %>
+<% end %>
