--- a/app/views/message/index.html.erb
+++ b/app/views/message/index.html.erb
@@ -1,3 +1,10 @@
+<% @messages.each do |message| %>
+  名前:<%= message.name %>
+  内容:<%= message.body %>
+  <br>
+<% end %>
+
+
 <%= form_for(@message) do |f| %>
   名前:<%= f.text_field :name %>
 
