--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -13,10 +13,16 @@
 </div>
 
 <%= form_for(@message) do |f| %>
-  名前:
-  <%= f.text_field :name %>
-
-  内容:
-  <%= f.text_field :body %>
-  <%= f.submit class: "btn btn-sm btn-primary" %>
+  <div class="form-group">
+    <label class="col-sm-2 control-label">Name</label>
+    <div class="col-sm-10">
+      <%= f.text_field :name,:class => "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="col-sm-2 control-label">Message</label>
+    <div class="col-sm-10">
+      <%= f.text_area :body,:class => "form-control" %>
+    </div>
+  </div>
 <% end %>
