--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -24,5 +24,6 @@
     <div class="col-sm-10">
       <%= f.text_area :body,:class => "form-control" %>
     </div>
+    <%= f.submit class: "btn btn-sm btn-primary" %>
   </div>
 <% end %>
