--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -5,7 +5,7 @@
     
   <div class="panel-body">
     <% @messages.each do |message| %>
-      <span class="label label-info"><%= message.name %></span>
+      <span class="label label-info"><%= message.name %>(<%= message.age %>)</span>
       <%= message.body %>
       <br>
     <% end %>
@@ -17,6 +17,12 @@
     <label class="col-sm-2 control-label">Name</label>
     <div class="col-sm-10">
       <%= f.text_field :name,:class => "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="col-sm-2 control-label">Age</label>
+    <div class="col-sm-10">
+      <%= f.text_field :age,:class => "form-control" %>
     </div>
   </div>
   <div class="form-group">
